<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.intino.alexandria</groupId>
	<artifactId>ui-framework</artifactId>
	<version>2.1.0</version>

	<properties>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sonar.language>java</sonar.language>
		<sonar.login></sonar.login>
		<sonar.password></sonar.password>
	</properties>

	<build>
		<testSourceDirectory>test</testSourceDirectory>
		<outputDirectory>../../out/production/ui</outputDirectory>
		<testOutputDirectory>../../out/test/ui</testOutputDirectory>
		<directory>../../out/build/ui-framework</directory>
		<resources>
					<resource><directory>res</directory></resource>
					<resource><directory>../../out/production/ui-elements</directory></resource>
				</resources>
		<plugins>
		    <plugin>
                  <artifactId>maven-clean-plugin</artifactId>
                  <version>3.0.0</version>
                  <configuration>
                    <skip>true</skip>
                  </configuration>
                </plugin>
		     <plugin>
		                    <groupId>org.apache.maven.plugins</groupId>
		                    <artifactId>maven-compiler-plugin</artifactId>
		                    <version>3.8.0</version>
		                    <executions>
		                        <execution>
		                            <id>default-compile</id>
		                            <phase>compile</phase>
		                            <goals>
		                                <goal>compile</goal>
		                            </goals>
		                            <configuration>
		                                <skipMain>true</skipMain>
		                            </configuration>
		                        </execution>
		                    </executions>
		                </plugin><plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<archive>
						<manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addClasspath>true</addClasspath>
							<classpathPrefix>dependency/</classpathPrefix>
						</manifest>
						<manifestSections>
                            <manifestSection>
                                                            <name>parameters</name>
                                                            <manifestEntries>
                                                              <_workspace></_workspace>
                                                            </manifestEntries>
                                                        </manifestSection>
                        </manifestSections>
					</archive>
				</configuration>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-dependency-plugin</artifactId>
			    <version>2.10</version>
			    <executions>
			        <execution>
			            <id>copy-dependencies</id>
			            <phase>package</phase>
			            <goals>
			                <goal>copy-dependencies</goal>
			            </goals>
			            <configuration>
			                <includeScope>runtime</includeScope>
			                <overWriteReleases>false</overWriteReleases>
			                <overWriteSnapshots>false</overWriteSnapshots>
			                <overWriteIfNewer>true</overWriteIfNewer>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>

						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>build-helper-maven-plugin</artifactId>
							<version>1.9.1</version>
							<executions>
								<execution>
									<id>add-source</id>
									<phase>generate-sources</phase>
									<goals>
										<goal>add-source</goal>
									</goals>
									<configuration>
										<sources>
											<source>src</source>
											<source>gen</source>

										</sources>
									</configuration>
								</execution>
								<execution>
									<id>add-test-source</id>
									<phase>generate-test-sources</phase>
									<goals>
										<goal>add-test-source</goal>
									</goals>
									<configuration>
										<sources>
											<source>test-gen</source>

										</sources>
									</configuration>
									</execution>
							</executions>
						</plugin>
			 <plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-source-plugin</artifactId>
							<version>3.0.1</version>
							<executions>
								<execution>
									<id>attach-sources</id>
									<goals>
										<goal>jar-no-fork</goal>
									</goals>
								</execution>
							</executions>
						</plugin>
		</plugins>
	</build>


	<repositories>
		<repository>
			<id>intino-maven-9</id>
			<url>https://artifactory.intino.io/artifactory/releases</url>
		</repository>
		<repository>
			<id>intino-maven-8</id>
			<url>https://artifactory.intino.io/artifactory/release-frameworks</url>
		</repository>
		<repository>
			<id>bedatadriven-6</id>
			<url>https://nexus.bedatadriven.com/content/groups/public/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>intino-maven</id>
			<name>intino-maven</name>
			<url>https://artifactory.intino.io/artifactory/release-frameworks</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>core-framework</artifactId>
			<scope>compile</scope>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>rest</artifactId>
			<scope>compile</scope>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>rest-accessor</artifactId>
			<scope>compile</scope>
			<version>1.0.7</version>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>logger4j</artifactId>
			<scope>compile</scope>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<scope>compile</scope>
			<version>4.1</version>
		</dependency>
		<dependency>
			<groupId>org.hashids</groupId>
			<artifactId>hashids</artifactId>
			<scope>compile</scope>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.locationtech.jts</groupId>
			<artifactId>jts-core</artifactId>
			<scope>compile</scope>
			<version>1.16.1</version>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>driver-shiny</artifactId>
			<scope>compile</scope>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>driver-r</artifactId>
			<scope>compile</scope>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
			<version>LATEST</version>
		</dependency>
	</dependencies>
</project>